# serializer version: 1
# name: test_get_all_packages
  dict({
    'packages': list([
      dict({
        'destination_country': 'Belgium',
        'friendly_name': 'friendly name 3',
        'info_text': 'info text 1',
        'location': 'location 1',
        'origin_country': 'Belgium',
        'package_type': 'Registered Parcel',
        'status': 'Expired',
        'timestamp': datetime.datetime(2020, 8, 10, 10, 32, tzinfo=<UTC>),
        'tracking_info_language': 'Unknown',
        'tracking_number': '123',
      }),
      dict({
        'destination_country': 'Belgium',
        'friendly_name': 'friendly name 1',
        'info_text': 'info text 1',
        'location': 'location 1',
        'origin_country': 'Belgium',
        'package_type': 'Registered Parcel',
        'status': 'In Transit',
        'timestamp': datetime.datetime(2020, 8, 10, 10, 32, tzinfo=<UTC>),
        'tracking_info_language': 'Unknown',
        'tracking_number': '456',
      }),
      dict({
        'destination_country': 'Belgium',
        'friendly_name': 'friendly name 2',
        'info_text': 'info text 1',
        'location': 'location 1',
        'origin_country': 'Belgium',
        'package_type': 'Registered Parcel',
        'status': 'Delivered',
        'timestamp': datetime.datetime(2020, 8, 10, 10, 32, tzinfo=<UTC>),
        'tracking_info_language': 'Unknown',
        'tracking_number': '789',
      }),
    ]),
  })
# ---
# name: test_get_packages_from_list
  dict({
    'packages': list([
      dict({
        'destination_country': 'Belgium',
        'friendly_name': 'friendly name 1',
        'info_text': 'info text 1',
        'location': 'location 1',
        'origin_country': 'Belgium',
        'package_type': 'Registered Parcel',
        'status': 'In Transit',
        'timestamp': datetime.datetime(2020, 8, 10, 10, 32, tzinfo=<UTC>),
        'tracking_info_language': 'Unknown',
        'tracking_number': '456',
      }),
      dict({
        'destination_country': 'Belgium',
        'friendly_name': 'friendly name 2',
        'info_text': 'info text 1',
        'location': 'location 1',
        'origin_country': 'Belgium',
        'package_type': 'Registered Parcel',
        'status': 'Delivered',
        'timestamp': datetime.datetime(2020, 8, 10, 10, 32, tzinfo=<UTC>),
        'tracking_info_language': 'Unknown',
        'tracking_number': '789',
      }),
    ]),
  })
# ---
